# plugboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yml  compose.yaml  docker-compose.yaml  latest  mkdocs.yaml  openapi.yaml  pyproject.toml  test.db  versions.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  1-bug.yaml  2-feature.md  3-docs.md  4-change.md  config.yaml
.github/agents/: critic.agent.md  docs.agent.md  examples.agent.md  lint.agent.md  researcher.agent.md  test.agent.md
.github/agents/docs/: AGENTS.md
.github/agents/linting/: AGENTS.md
.github/instructions/: models.instructions.md
.github/workflows/: benchmarks.yaml  docker.yaml  docs.yaml  lint-test.yaml  pr-check.yaml  pypi.yaml  release.yaml
0.1.0/: index.html  objects.inv
0.1.0/contributing/: index.html
0.1.0/search/: search_index.json
0.1.0/usage/key-concepts/: index.html
0.1.1/: sitemap.xml
0.1.1/usage/configuration/: index.html
0.2.0/: 404.html  index.html  objects.inv
0.3.0/: index.html
0.3.0/usage/key-concepts/: index.html
0.4.0/: index.html  objects.inv  sitemap.xml
0.4.0/search/: search_index.json
0.5.1/: objects.inv  tags.json
0.5.1/api/utils/: index.html
0.5.1/usage/key-concepts/: index.html
0.6.0/: 404.html  index.html  tags.json
0.6.0/contributing/: index.html
0.6.0/usage/configuration/: index.html
0.6.0/usage/key-concepts/: index.html
0.7.0/: index.html  objects.inv  tags.json
0.7.0/contributing/: index.html
0.7.0/usage/configuration/: index.html
0.7.0/usage/key-concepts/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml  tags.json
dev/api/utils/: index.html
dev/contributing/: index.html
dev/css/: mkdocstrings.css
dev/search/: search_index.json
dev/usage/ai/: index.html
dev/usage/configuration/: index.html
dev/usage/key-concepts/: index.html
dev/usage/topics/: index.html
docs/: index.md
docs/api/: hello-world.md
docs/api/component/: component.md  io-controller.md
docs/api/connector/: channel.md  connector.md
docs/api/events/: events.md
docs/api/process/: process.md
docs/api/schemas/: schemas.md
docs/api/state/: state-backend.md  state.md
docs/api/utils/: utils.md
docs/css/: mkdocstrings.css
docs/examples/: hello-world.md
docs/examples/001_hello_world/: hello-world.md  hello_world.py  model.yaml
docs/examples/002_simple_model/: simple-model.ipynb  simple-model.md
docs/examples/tutorials/: event-driven-models.md  hello-world.md  more-complex-process.md  more-components.md  running-in-parallel.md  tuning-a-process.md
docs/usage/: ai.md  configuration.md  key-concepts.md
examples/: AGENTS.md  README.md
plugboard/: __init__.py  channel.py  component.py  connector.py  hello.py  io_controller.py  process.py  state_backend.py
plugboard-schemas/: README.md  pyproject.toml
plugboard-schemas/plugboard_schemas/: __init__.py  _graph.py  _validation.py  _validator_registry.py  _version.py  component.py  config.py  connector.py  process.py  state.py  tune.py
plugboard/_zmq/: zmq_proxy.py
plugboard/cli/: __init__.py  server.py
plugboard/component/: __init__.py  component.py  io_controller.py  utils.py
plugboard/connector/: __init__.py  _zmq.py  asyncio_channel.py  channel.py  channel_builder.py  connector.py  connector_builder.py  event_connector_spec_builder.py  rabbitmq_channel.py  ray_channel.py  redis_channel.py  serde_channel.py  zmq_channel.py
plugboard/diagram/: __init__.py  diagram.py  mermaid.py
plugboard/events/: __init__.py  event.py  event_connector_builder.py  event_connectors.py  event_handlers.py
plugboard/exceptions/: __init__.py
plugboard/process/: __init__.py  local_process.py  process.py  process_builder.py  ray_process.py
plugboard/schemas/: __init__.py  _common.py  component.py  config.py  connector.py  entities.py  event.py  io.py  process.py  state.py  tune.py
plugboard/server/: app.py  models.py
plugboard/specs/: __init__.py  component.py  process.py
plugboard/state/: __init__.py  dict_state_backend.py  multiprocessing_state_backend.py  postgres_state_backend.py  ray_state_backend.py  sqlite_queries.py  sqlite_state_backend.py  state_backend.py
plugboard/tune/: tune.py
plugboard/utils/: __init__.py  as_dict_mixin.py  async_utils.py  class_factory.py  class_loader.py  di.py  diagram.py  entities.py  export_mixin.py  logging.py  path_utils.py  random.py  ray.py  registry.py  settings.py  theme.py
tests/: conftest.py  mpq.ipynb
tests/benchmark/: conftest.py  test_benchmarking.py
tests/data/: dynamic-param-process.yaml  minimal-process-with-tune.yaml
tests/integration/: conftest.py  test_channel.py  test_component.py  test_component_decorator.py  test_component_event_handlers.py  test_component_resources.py  test_connector_pubsub.py  test_job_id_wiring.py  test_process_builder.py  test_process_stop_cancel.py  test_process_stop_event.py  test_process_topology.py  test_process_validation.py  test_process_with_components_run.py  test_ray.py  test_schemas.py  test_sqlite_state_backend.py  test_sqllite_state_backend.py  test_state_backend.py  test_state_backend_multiprocess.py  test_tuner.py
tests/smoke/: test_examples_smoke.py
tests/unit/: test_channel.py  test_channel_builder.py  test_cli.py  test_cli_go.py  test_component.py  test_component_decorator.py  test_component_io_inheritance.py  test_component_registry.py  test_conftest.py  test_connector_builder.py  test_connector_pubsub.py  test_data_io_components.py  test_data_reader.py  test_diagram.py  test_entities.py  test_event_handlers.py  test_file_reader_writer.py  test_hello.py  test_llm.py  test_openai.py  test_process_validation.py  test_random.py  test_ray_resources.py  test_resource.py  test_schemas.py  test_sql_reader_writer.py  test_state_backend.py  test_tuner.py  test_tuner_resources.py  test_utils.py  test_websocket_reader_writer.py  test_zmq_proxy.py
(+213 files in other folders)
